Initial commit Replace .less with .scss file. Update project info. Use grunt to build scss files.

--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -1,21 +1,21 @@
 // Variables
 
-@bodyBackgroundColor: #ffffff;
-@baseFontFamily: "Merriweather", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
-@baseFontColor: #7f8c8d;
-@headerFontFamily: "Roboto Slab", @baseFontFamily;
-@headerFontColor: #151515;
-@headerLinkColor: @headerFontColor;
-@secondaryFontFamily: "Open Sans Condensed", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
-@preFontFamily: "Consolas", Courier, monospace;
-@linkColor: #3498db;
-@linkColorHover: darken(@linkColor, 50%);
-@borderColor: #ecf0f1;
-@subtleColor: rgba(0,0,0,0.05);
-@postmetaColor: #95a5a6;
-@gistBackgroundColor: #fdfdfd;
+$bodyBackgroundColor: #ffffff;
+$baseFontFamily: "Merriweather", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
+$baseFontColor: #7f8c8d;
+$headerFontFamily: "Roboto Slab", $baseFontFamily;
+$headerFontColor: #151515;
+$headerLinkColor: $headerFontColor;
+$secondaryFontFamily: "Open Sans Condensed", "Open Sans", "Helvetica Neue", Helvetica, Arial, "Nimbus L", sans-serif;
+$preFontFamily: "Consolas", Courier, monospace;
+$linkColor: #3498db;
+$linkColorHover: darken($linkColor, 50%);
+$borderColor: #ecf0f1;
+$subtleColor: rgba(0,0,0,0.05);
+$postmetaColor: #95a5a6;
+$gistBackgroundColor: #fdfdfd;
 
-@maxPageWidth: 600px;
+$maxPageWidth: 600px;
 
 // Styles
 
@@ -25,8 +25,8 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css);
 
 body {
-    background-color: @bodyBackgroundColor;
-    color: @baseFontColor;
+    background-color: $bodyBackgroundColor;
+    color: $baseFontColor;
     font-size: 15px;
     font-weight: 100;
     line-height: 1.6em;
@@ -40,7 +40,7 @@ body {
     }
 
 h1, h2, h3, h4, p, li, dt, dd {
-    font-family: @baseFontFamily;
+    font-family: $baseFontFamily;
 }
 
 h1, .post-meta {
@@ -48,14 +48,14 @@ h1, .post-meta {
 }
 
 a, a:visited {
-    color: @linkColor;
+    color: $linkColor;
     text-decoration: none;
     transition: color ease 0.7s;
     -webkit-transition: color ease 0.7s;
 }
 
 a:focus, a:hover {
-    color: @linkColorHover;
+    color: $linkColorHover;
 }
 
 p, li, dt, dd {
@@ -73,7 +73,7 @@ li {
 }
 
 pre {
-    font-family: @preFontFamily;
+    font-family: $preFontFamily;
     font-size: 1em;
     line-height: 1.2em;
     padding: 1em;
@@ -83,18 +83,18 @@ pre {
     white-space: -pre-wrap;
     white-space: -o-pre-wrap;
     word-wrap: break-word;
-    background-color: @subtleColor;
+    background-color: $subtleColor;
 }
 
 p code {
-    font-family: @preFontFamily;
+    font-family: $preFontFamily;
     font-size: .8em;
     line-height: 1.2em;
 }
 
 h1 {
-    color: @headerFontColor;
-    font-family: @headerFontFamily;
+    color: $headerFontColor;
+    font-family: $headerFontFamily;
     font-size: 36px;
     font-weight: 400;
     line-height: 42px;
@@ -104,7 +104,7 @@ h1 {
 
 #site-head, article, nav, article.preview, a.archive-link, .article-nav {
     margin: 20px auto;
-    max-width: @maxPageWidth;
+    max-width: $maxPageWidth;
     width: 90%;
 }
 
@@ -135,7 +135,7 @@ article.preview {
       border-radius: 50%;
       background-size: cover !important;
       background-position: center center !important;
-      background-color: @bodyBackgroundColor;
+      background-color: $bodyBackgroundColor;
     }
 }
 
@@ -152,8 +152,8 @@ h1.blog-title {
 }
 
 h2.blog-description {
-    border-bottom: 1px solid @borderColor;
-    border-top: 1px solid @borderColor;
+    border-bottom: 1px solid $borderColor;
+    border-top: 1px solid $borderColor;
     margin-bottom: 3em;
     padding: .5em 1em;
     line-height: 1.2em;
@@ -173,7 +173,7 @@ section.author, section.share {
 
 section.share {
     margin-top: 1em;
-    border-top: 1px solid @borderColor;
+    border-top: 1px solid $borderColor;
     padding-top: 1em;
     text-align: right;
 }
@@ -184,7 +184,7 @@ section.share {
     }
 
 section.author h4 {
-    font-family: @headerFontFamily;
+    font-family: $headerFontFamily;
     font-weight: 400;
     margin-bottom: 4px;
 }
@@ -193,7 +193,7 @@ section.author p.attr, section.share p.info {
     font-size: 16px;
     line-height: 20px;
     text-transform: uppercase;
-    font-family: @secondaryFontFamily;
+    font-family: $secondaryFontFamily;
 }
 
 section.author p.attr {
@@ -211,19 +211,19 @@ section.author p.bio {
 }
 
 blockquote {
-    font-family: @secondaryFontFamily;
+    font-family: $secondaryFontFamily;
     font-size: 1.6em;
     font-weight: 300;
     line-height: 1.2em;
     font-style: italic;
     text-transform: uppercase;
-    border-left: .5em solid @subtleColor;
+    border-left: .5em solid $subtleColor;
     margin-left: 1em;
     padding-left: 1em;
 }
 
     blockquote p {
-        font-family: @secondaryFontFamily;
+        font-family: $secondaryFontFamily;
         font-size: 1.6em;
         font-weight: 300;
         line-height: 1.2em;
@@ -232,8 +232,8 @@ blockquote {
     }
 
 .post-meta {
-    color: @postmetaColor;
-    font-family: @secondaryFontFamily;
+    color: $postmetaColor;
+    font-family: $secondaryFontFamily;
     font-size: 20px;
     font-weight: 300;
     margin-top: 1em;
@@ -257,18 +257,18 @@ div.authorimage {
 }
 
 h1.post-title a, h1.blog-title a {
-    color: @headerLinkColor;
+    color: $headerLinkColor;
     transition: color ease 0.7s;
     -webkit-transition: color ease 0.7s;
 }
 
 h1.post-title a:focus, h1.post-title a:hover, h1.blog-title a:focus, h1.blog-title a:hover {
-    color: @linkColor;
+    color: $linkColor;
     text-decoration: none;
 }
 
 h2 {
-    font-family: @secondaryFontFamily;
+    font-family: $secondaryFontFamily;
     margin-top: 2em;
     text-transform: uppercase;
     font-weight: 300;
@@ -300,14 +300,14 @@ img.userimage {
 /* === Footer === */
 
 footer {
-    background: @subtleColor;
+    background: $subtleColor;
     margin: 4em 0 0;
     padding: 2em 0;
     text-align: center;
 }
 
     footer section {
-        font-family: @secondaryFontFamily;
+        font-family: $secondaryFontFamily;
         font-weight: 300;
         font-size: 18px;
         margin: 0 auto;
@@ -318,15 +318,15 @@ footer {
 
 footer.post-footer {
     background: none;
-    border-top: 1px solid @borderColor;
+    border-top: 1px solid $borderColor;
     margin-top: 1em;
 }
 
 /* === Navigation and Pagination === */
 
 nav {
-    border-bottom: 1px solid @borderColor;
-    border-top: 1px solid @borderColor;
+    border-bottom: 1px solid $borderColor;
+    border-top: 1px solid $borderColor;
     margin-bottom: 3em;
     text-align: center;
 }
@@ -342,7 +342,7 @@ nav {
 
     nav li {
         display: inline-block;
-        font-family: @secondaryFontFamily;
+        font-family: $secondaryFontFamily;
         font-size: 18px;
         font-weight: 300;
         margin: 0 2em;
@@ -370,10 +370,10 @@ nav {
     }
 
 a.archive-link {
-    border-bottom: 1px solid @borderColor;
-    border-top: 1px solid @borderColor;
+    border-bottom: 1px solid $borderColor;
+    border-top: 1px solid $borderColor;
     display: block;
-    font-family: @secondaryFontFamily;
+    font-family: $secondaryFontFamily;
     font-size: 24px;
     font-weight: 300;
     margin-bottom: 3em;
@@ -387,16 +387,16 @@ a.archive-link {
     position: relative;
     width: 90%;
     max-width: 600px;
-    font-family: @secondaryFontFamily;
+    font-family: $secondaryFontFamily;
     text-transform: uppercase;
     font-size: 20px;
-    color: @baseFontColor;
+    color: $baseFontColor;
     text-align: center;
     padding: 0.5em 0;
 }
 
     .pagination a {
-        color: @linkColor
+        color: $linkColor
     }
 
 .older-posts, .newer-posts {
@@ -423,7 +423,7 @@ a.archive-link {
 }
 
 .older-posts:hover, .newer-posts:hover {
-    color: @linkColorHover;
+    color: $linkColorHover;
     text-decoration: none;
 }
 
@@ -436,23 +436,23 @@ a.archive-link {
 }
 
     .gist .gist-file {
-        font-family: @preFontFamily;
-        border: 1px solid @subtleColor !important;
+        font-family: $preFontFamily;
+        border: 1px solid $subtleColor !important;
     }
 
         .gist .gist-file .gist-meta {
-            font-family: @secondaryFontFamily !important;
+            font-family: $secondaryFontFamily !important;
             font-weight: 300 !important;
             text-transform: uppercase !important;
             display: none !important; /* Hide GitHub attribution */
         }
 
             .gist .gist-file .gist-meta a:visited {
-                color: @linkColor !important
+                color: $linkColor !important
             }
 
         .gist .gist-file .gist-data {
-            background: @gistBackgroundColor !important;
+            background: $gistBackgroundColor !important;
             border-bottom: none !important; /* Hide GitHub attribution */
         }
 
@@ -461,7 +461,7 @@ a.archive-link {
             }
 
             .gist .gist-file .gist-data .line-numbers, .gist .gist-file .gist-meta {
-                background-color: @subtleColor !important
+                background-color: $subtleColor !important
             }
 
             .gist .gist-file .gist-data .line-numbers, .gist .gist-file .gist-data .line-pre {
