--- a/assets/css/screen.scss
+++ b/assets/css/screen.scss
@@ -330,7 +330,7 @@ footer {
         font-weight: 300;
         font-size: 18px;
         margin: 0 auto;
-        max-width: 600px;
+        max-width: $maxPageWidth;
         text-transform: uppercase;
         width: 90%;
     }
@@ -405,7 +405,7 @@ a.archive-link {
 .pagination {
     position: relative;
     width: 90%;
-    max-width: 600px;
+    max-width: $maxPageWidth;
     font-family: $secondaryFontFamily;
     text-transform: uppercase;
     font-size: 20px;
